project(libctests)
cmake_minimum_required(VERSION 3.9)
add_definitions(-std=c++17)
set(SOURCES
	_PDCLIB/_PDCLIB_ascii.cpp
	_PDCLIB/_PDCLIB_atomax.cpp
	_PDCLIB/_PDCLIB_digits.cpp
	_PDCLIB/_PDCLIB_latin1.cpp
	_PDCLIB/_PDCLIB_strtox_main.cpp
	_PDCLIB/_PDCLIB_strtox_prelim.cpp
	_PDCLIB/_PDCLIB_utf8.cpp
)
set(SOURCES
	${SOURCES}
	ctype/isalnum.cpp
	ctype/isalpha.cpp
	ctype/isblank.cpp
	ctype/iscntrl.cpp
	ctype/isdigit.cpp
	ctype/isgraph.cpp
	ctype/islower.cpp
	ctype/isprint.cpp
	ctype/ispunct.cpp
	ctype/isspace.cpp
	ctype/isupper.cpp
	ctype/isxdigit.cpp
	ctype/tolower.cpp
	ctype/toupper.cpp
)
set(SOURCES
	${SOURCES}
	inttypes/imaxabs.cpp
	inttypes/imaxdiv.cpp
	inttypes/strtomax.cpp
	stdio/_pdclib_filemode.cpp
	stdio/clearerr.cpp
	stdio/fclose.cpp
	stdio/fgetpos.cpp
	stdio/fgets.cpp
	stdio/fopen.cpp
	stdio/fputs.cpp
	stdio/fread.cpp
	stdio/freopen.cpp
	stdio/fseek.cpp
	stdio/ftell.cpp
	#stdio/gets.cpp
	#stdio/perror.cpp
	#stdio/printf.cpp
	#stdio/puts.cpp
	#stdio/rename.cpp
	#stdio/scanf.cpp
	#stdio/setbuf.cpp
	#stdio/setvbuf.cpp
	#stdio/tmpnam.cpp
	#stdio/ungetc.cpp
)
set(SOURCES
	${SOURCES}
	stdlib/abs.cpp
	stdlib/bsearch.cpp
	stdlib/div.cpp
	stdlib/labs.cpp
	stdlib/ldiv.cpp
	stdlib/llabs.cpp
	stdlib/lldiv.cpp
	stdlib/qsort.cpp
	stdlib/rand.cpp
	stdlib/strtol.cpp
	stdlib/strtoll.cpp
	stdlib/strtoul.cpp
	stdlib/strtoull.cpp
	string/memchr.cpp
	string/memcmp.cpp
	string/memcpy.cpp
	string/memmove.cpp
	string/memset.cpp
	string/strcasecmp.cpp
	string/strcat.cpp
	string/strchr.cpp
	string/strcmp.cpp
	string/strcoll.cpp
	string/strcpy.cpp
	string/strcspn.cpp
	string/strdup.cpp
	string/strerror.cpp
	string/strlcat.cpp
	string/strlcpy.cpp
	string/strlen.cpp
	string/strncasecmp.cpp
	string/strncat.cpp
	string/strncmp.cpp
	string/strncpy.cpp
	string/strndup.cpp
	string/strnlen.cpp
	string/strpbrk.cpp
	string/strrchr.cpp
	string/strspn.cpp
	string/strstr.cpp
	string/strtok.cpp
	string/strxfrm.cpp
	wchar/mbsinit.cpp
	wchar/wcscat.cpp
	wchar/wcscmp.cpp
	wchar/wcscspn.cpp
	wchar/wcsncat.cpp
	wchar/wcsncmp.cpp
	wchar/wcspbrk.cpp
	wchar/wcsspn.cpp
	wchar/wcsstr.cpp
	wchar/wcstok.cpp
	wchar/wmemchr.cpp
	wchar/wmemcmp.cpp
	wchar/wmemcpy.cpp
	wchar/wmemmove.cpp
	wctype/iswalnum.cpp
	wctype/iswalpha.cpp
	wctype/iswblank.cpp
	wctype/iswcntrl.cpp
	wctype/iswctype.cpp
	wctype/iswdigit.cpp
	wctype/iswlower.cpp
	wctype/iswpunct.cpp
	wctype/iswspace.cpp
	wctype/iswupper.cpp
	wctype/iswxdigit.cpp
	wctype/towctrans.cpp
	wctype/towgraph.cpp
	wctype/towlower.cpp
	wctype/towupper.cpp
	wctype/wctrans.cpp
	wctype/wctype.cpp
)
add_executable(libctests ${SOURCES})
target_link_libraries(libctests gtest gtest_main pthread)
